# RustyBucket

./: .gitignore  readme.md
arrow/basics/: Cargo.toml
arrow/basics/src/: arrow_exe.rs  main.rs
arrow/mini_query_engine/: Cargo.toml
basics/src/: main.rs  options.rs  practice.rs  struct.rs  trait.rs
custom_types/src/: main.rs
debug_rust/: Cargo.toml
debug_rust/src/: main.rs
enums/src/: main.rs
hello_world/src/: main.rs
leetcode/src/: main.rs
mini_observe/: Cargo.toml  README.md
mini_observe/crates/api/: Cargo.toml
mini_observe/crates/api/src/: lib.rs
mini_observe/crates/common/: Cargo.toml
mini_observe/crates/common/src/: config.rs  error.rs  lib.rs  model.rs
mini_observe/crates/ingest/: Cargo.toml
mini_observe/crates/ingest/src/: lib.rs
mini_observe/crates/query/: Cargo.toml
mini_observe/crates/query/src/: lib.rs
mini_observe/crates/server/: Cargo.toml
mini_observe/crates/server/src/: main.rs
mini_observe/crates/storage/: Cargo.toml
mini_observe/crates/storage/src/: lib.rs
mini_observe/crates/wal/: Cargo.toml
mini_observe/crates/wal/src/: lib.rs
modules/src/: main.rs  math.rs
parquet/: Cargo.toml  logs.parquet
parquet/mini_observe_query/: Cargo.toml
parquet/src/: data.rs  main.rs  parquet_reader.rs  parquet_writer.rs  query.rs
pointers/src/: main.rs
primitives/src/: main.rs
systems_rust/: Cargo.toml  async.md
systems_rust/async_metric_collector/: Cargo.toml
systems_rust/config_store/: Cargo.toml
systems_rust/multi_threaded_counter/: Cargo.toml
systems_rust/src/: async_await.rs  channel.rs  main.rs  mutex.rs  rw_lock.rs
traits/src/: main.rs
(+18 files in other folders)
