[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/wal",
    "crates/storage",
    "crates/ingest",
    "crates/query",
    "crates/api",
    "crates/server"
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.36", features = ["serde"] }

arrow = { version = "58", features = ["prettyprint"] }
parquet = "58"
datafusion = { version = "53.1.0", features = ["parquet"] }